# lcfs

./: .dockerignore  .gitignore  ANALYSIS_SUMMARY.md  COMPLIANCE.yaml  CONTRIBUTING.md  GitVersion.yml  LCFS_ERD.drawio  LCFS_ERD_v0.2.0.drawio  MIGRATION_STAGING_STRATEGY.md  PARALLEL_TESTING.md  PHASE1_FILE_CHECKLIST.md  README.md  TFRS_MIGRATION_REVIEW.md  bcgovpubcode.yml  combine-reports.js  create_historical_compliance_reports.sql  docker-compose-db-only.yml  docker-compose-test.yml  docker-compose.rag.yml  docker-compose.yml  generate-summary.js  package-lock.json  test_parallel_setup.sh
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-celery.openshift  Dockerfile.dev  Dockerfile.openshift  README.md  alembic.ini  migrate.sh  pyproject.toml  requirements.txt  test.txt  test_org_update.py
backend/.github/workflows/: tests.yml
backend/deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
backend/lcfs/: __init__.py  __main__.py  conftest.py  dependancies.py  logging_config.py  prestart.sh  settings.py  start.sh
backend/lcfs/db/: base.py  connection_management.md  dependencies.py  utils.py
backend/lcfs/db/migrations/: env.py
backend/lcfs/db/models/: AdminAdjustment.py  AdminAdjustmentHistory.py  AdminAdjustmentInternalComment.py  AdminAdjustmentStatus.py  Category.py  Comment.py  EnergyEffectivenessRatio.py  FuelCategory.py  FuelCode.py  FuelCodePrefix.py  FuelCodeStatus.py  FuelType.py  InitiativeAgreement.py  InitiativeAgreementHistory.py  InitiativeAgreementStatus.py  InternalComment.py  Issuance.py  IssuanceHistory.py  NotificationChannel.py  NotificationChannelSubscription.py  NotificationMessage.py  NotificationType.py  Organization.py  OrganizationActionsType.py  OrganizationAddress.py  OrganizationAttorneyAddress.py  OrganizationBalance.py  OrganizationHistory.py  OrganizationStatus.py  OrganizationType.py  Permission.py  ProvisionAct.py  ProvisionOfTheAct.py  Role.py  RolePermission.py  Transaction.py  TransactionStatusView.py  TransactionType.py  TransactionView.py  Transfer.py  (+12 more)
backend/lcfs/db/seeders/: common_seeder.py  dev_seeder.py  load_nonprod_users.py  nonprod_user_seed_data.py  organization_seeder.py  organization_status_seeder.py  organization_type_seeder.py  prod_seeder.py  pytest_seeder.py  role_seeder.py  seed_charging_equipment_data.py  seed_charging_power_output.py  seed_common.py  seed_database.py  seed_dev.py  seed_manager.py  seed_prod.py  staging_seeder.py  test_seeder.py  user_profile_seeder.py  user_role_seeder.py  user_seed_data.py
backend/lcfs/db/sql/: manage_views.py  materialized_views.sql
backend/lcfs/dependencies/: dependencies.py
backend/lcfs/scripts/: dynamic_scheduler.py  geocode_org_snapshots.py  send_transaction.py  tasks.py  verify_database_mv_functions_triggers.sql
backend/lcfs/scripts/tasks/: TASKS_README.md  __init__.py  common.py  compliance_report.py  fuel_code_expiry.py
backend/lcfs/scripts/tests/: test_dynamic_scheduler.py  test_fuel_code_expiry.py
backend/lcfs/services/: __init__.py
backend/lcfs/services/ai_analytics/: __init__.py  chart_builder.py  llm_client.py  prompts.py  query_executor.py  query_planner.py  schema_catalog.py  semantic_registry.py  service.py  session_memory.py  sql_generator.py  sql_validator.py  types.py
backend/lcfs/services/clamav/: client.py
backend/lcfs/services/geocoder/: README.md  __init__.py  cache.py  client.py  dependency.py  schema.py
backend/lcfs/services/jobs/: jobs.py
backend/lcfs/services/keycloak/: authentication.py  dependencies.py
backend/lcfs/services/minio/: client.py
backend/lcfs/services/rabbitmq/: base_consumer.py  consumers.py  report_consumer.py  transaction_consumer.py
backend/lcfs/services/redis/: dependency.py  lifetime.py
backend/lcfs/services/s3/: client.py  dependency.py  lifetime.py  schema.py
backend/lcfs/services/scheduler/: scheduler.py
backend/lcfs/services/tfrs/: redis_balance.py
backend/lcfs/tests/: __init__.py  conftest.py  payloads.py  test_access_control.py  test_audit_events.py  test_auth_middleware.py  test_lines_7_9_logic.py  test_organization.py  test_users.py
backend/lcfs/tests/admin_adjustment/: conftest.py  test_admin_adjustment.py  test_admin_adjustment_services.py
backend/lcfs/tests/ai_analytics/: test_ai_analytics_views.py  test_ai_settings.py  test_chart_builder.py  test_forecast_chart_builder.py  test_forecast_planner.py  test_forecast_sql_builder.py  test_forecasting_service.py  test_local_endpoint_validator.py  test_local_llm_runtime.py  test_mindsdb_client.py  test_mindsdb_endpoint_validator.py  test_ollama_client.py  test_openclaw_client.py  test_query_planner.py  test_schema_catalog.py  test_sql_generator.py  test_sql_validator.py
backend/lcfs/tests/allocation_agreement/: conftest.py  test_alllocation_agreement_export.py  test_alllocation_agreement_importer.py  test_alllocation_agreement_repo.py  test_allocation_agreement_services.py  test_allocation_agreement_views.py  test_importer_validation.py
backend/lcfs/tests/audit_log/: conftest.py  test_audit_log.py  test_audit_log_repo.py  test_audit_log_services.py  test_audit_log_views.py
backend/lcfs/tests/calculator/: test_calculator_repo.py  (+2 more)
backend/lcfs/utils/: __init__.py  constants.py  performance_profiler.py  query_analyzer.py  spreadsheet_builder.py  unique_key_generators.py
backend/lcfs/web/: __init__.py  application.py  lifetime.py  openapi.json
backend/performance/: locustfile.py  readme.md
backend/shared/: openapi.json
(+3066 files in other folders)
