[tool.poetry]
name = "lcfs"
version = "0.1.0"
description = ""
authors = [

]
maintainers = [

]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = { version = "^0.24.0", extras = ["standard"] }
pydantic = {extras = ["email"], version = "^2.4.2"}
yarl = "^1.8.2"
ujson = "^5.7.0"
SQLAlchemy = {version = "^2.0.0", extras = ["asyncio"]}
alembic = "^1.12.1"
asyncpg = {version = "^0.27.0", extras = ["sa"]}
redis = {version = "^4.4.2", extras = ["hiredis"]}
httptools = "^0.5.0"
prometheus-fastapi-instrumentator = "6.0.0"
colorlog = "6.7.0"
distlib = "^0.3.3"
pydantic-settings = "^2.0.3"
pyjwt = "^2.8.0"
debugpy = "^1.8.0"
cryptography = "^41.0.7"
faker = "^21.0.0"
httpx = "^0.23.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
flake8 = "~4.0.1"
mypy = "^1.1.1"
isort = "^5.11.4"
pre-commit = "^3.0.1"
wemake-python-styleguide = "^0.17.0"
black = "^22.12.0"
autoflake = "^1.6.1"
pytest-cov = "^4.0.0"
anyio = "^3.6.2"
pytest-env = "^0.8.1"
fakeredis = "^2.5.0"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["lcfs",]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true

# Remove this and add `types-redis`
# when the issue https://github.com/python/typeshed/issues/8242 is resolved.
[[tool.mypy.overrides]]
module = [
    'redis.asyncio'
]
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
env = [
    "LCFS_ENVIRONMENT=pytest",
    "LCFS_DB_BASE=lcfs_test",
]

[fastapi-template.options]
project_name = "lcfs"
api_type = "rest"
enable_redis = "True"
enable_rmq = "None"
ci_type = "github"
enable_migrations = "True"
enable_taskiq = "None"
enable_kube = "None"
kube_name = "lcfs"
enable_routers = "True"
enable_kafka = "None"
enable_loguru = "None"
traefik_labels = "None"
add_dummy = "None"
orm = "sqlalchemy"
self_hosted_swagger = "None"
prometheus_enabled = "None"
sentry_enabled = "None"
otlp_enabled = "None"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
