[tool.poetry]
name = "lcfs"
version = "0.1.0"
description = ""
authors = [

]
maintainers = [

]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.4"
uvicorn = { version = "^0.24.0", extras = ["standard"] }
pydantic = { extras = ["email"], version = "^2.4.2" }
yarl = "^1.8.2"
ujson = "^5.7.0"
SQLAlchemy = { version = "^2.0.0", extras = ["asyncio"] }
alembic = "^1.12.1"
asyncpg = { version = "^0.30.0", extras = ["sa"] }
redis = { version = "^4.4.2", extras = ["hiredis"] }
httptools = "^0.6.0"
prometheus-fastapi-instrumentator = "6.0.0"
distlib = "^0.3.8"
pydantic-settings = "^2.0.3"
pyjwt = "^2.8.0"
debugpy = "^1.8.0"
cryptography = "^43.0.1"
fastapi-cache2 = "^0.2.1"
httpx = "^0.23.3"
pandas = "^2.1.4"
openpyxl = "^3.1.2"
xlwt = "^1.3.0"
xlrd = "^2.0.1"
numpy = "^1.26.4"
lupa = "^2.0"
alembic-postgresql-enum = "^1.1.2"
bump-pydantic = "^0.8.0"
black = "^24.4.2"
boto3 = "^1.35.26"
typing-extensions = "^4.12.2"
structlog = "^24.4.0"
python-multipart = "^0.0.18"
aio-pika = "^9.4.3"
jinja2 = "^3.1.6"
requests = "^2.32.4"
croniter = "^6.0.0"
apscheduler = "^3.11.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
flake8 = "~4.0.1"
mypy = "^1.1.1"
isort = "^5.11.4"
pre-commit = "^3.0.1"
wemake-python-styleguide = "^0.17.0"
black = "^24.4.2"
autoflake = "^1.6.1"
pytest-cov = "^4.0.0"
anyio = "^3.6.2"
pytest-env = "^0.8.1"
pytest-split = "^0.10.0"
fakeredis = "^2.5.0"
rich = "^13.9.4"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["lcfs", ]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true

# Remove this and add `types-redis`
# when the issue https://github.com/python/typeshed/issues/8242 is resolved.
[[tool.mypy.overrides]]
module = [
    'redis.asyncio'
]
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
env = [
    "APP_ENVIRONMENT=pytest",
    "LCFS_DB_BASE=lcfs_test",
]
# Test discovery patterns
testpaths = ["lcfs/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Disable warnings for cleaner output
addopts = [
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "-v"
]

[fastapi-template.options]
project_name = "lcfs"
api_type = "rest"
enable_redis = "True"
enable_rmq = "None"
ci_type = "github"
enable_migrations = "True"
enable_taskiq = "None"
enable_kube = "None"
kube_name = "lcfs"
enable_routers = "True"
enable_kafka = "None"
enable_loguru = "None"
traefik_labels = "None"
add_dummy = "None"
orm = "sqlalchemy"
self_hosted_swagger = "None"
prometheus_enabled = "None"
sentry_enabled = "None"
otlp_enabled = "None"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
